product align fixed with vanila css

--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,10 +1,17 @@
 .product {
   width: 300px;
   height: 510px;
+  border: 1px solid #95a0a7;
+  border-radius: 8px;
 }
 .product img {
   width: 286px;
   height: 286px;
+  border-radius: 8px;
+  margin: 7px;
+}
+.product-info {
+  margin: 0 14px;
 }
 .product-name {
   font-family: "Lato";
@@ -12,4 +19,5 @@
   font-style: normal;
   font-size: 21px;
   line-height: 25px;
+  margin-top: 7px;
 }
